--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -6,29 +6,92 @@
             <br><strong>UTILISE LE CODE :</strong><br>
                 SZNL</p>
         </div> <br>
-        <div id="accueil-link" onclick="accueil()">
-            <p>Accueil</p>        
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class='bx bx-home'></i>
+                <p>Accueil</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="vetements-link" onclick="habits()">
-            <p>vetements</p>
-            <img src="/img/mode.jpg" width="50px" alt="">
-        
+        <div id="link" onclick="phone()">
+            <div class="left">
+                <i class="fa-solid fa-mobile"></i>
+                <p>Telephone & Pc</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="phone-link" onclick="phone()">
-            <p>telephone & pc</p>
-            <img src="/img/phone.jpg" width="50px" alt="">
-        
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class='bx bxs-watch-alt'></i>
+                <p>Montres & Bijoux</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="frigo-link" onclick="frigo()">
-            <p>electro-menager</p>
-            <img src="/img/frigo.jpg" width="50px" alt="">
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class="fa-solid fa-shirt"></i>
+                <p>Vetements hommes</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class="fa-solid fa-person-dress"></i>
+                <p>Vetements femmes</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class="fa-solid fa-child"></i>
+                <p>Vetements enfants</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <p>Beaute</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="maison()">
+            <div class="left">
+                <i class="fa-solid fa-bed"></i>
+                <p>Meuble & deco</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class='bx bx-car'></i>
+                <p>Location de vehicule</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class="fa-solid fa-hotel"></i>
+                <p>Location d'appartement</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <hr>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                <i class='bx bxs-shopping-bag-alt'></i>
+                <p>Mon panier</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
+        <div id="link" onclick="accueil()">
+            <div class="left">
+                
+                <p>Se connecter</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
         
-        </div><br>
-        <div id="maison-link" onclick="maison()">
-            <p>maison</p>
-            <img src="/img/canaper.jpg" width="50px" alt="">
-        </div>
-        <br> <br> <br> <br>
         <br> <br> <br> <br>
     </div>
 </div>
