--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="refresh" content="2"> -->
+    <meta name="theme-color" content="#293847">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -32,11 +33,18 @@
         <%- include('composants/burger-menu.ejs') %>
             <!-- le burger menu ici -->
 
-            <div class="header" style="margin-top: auto; margin-bottom: auto; padding: 5px; height: 20px;">
-                <h2>Telephone</h2>
+            <div class="header" style="margin-top: 115px; margin-bottom: 20px; padding: 5px; height: 20px;">
+                <h3>Telephone & Ordinateur</h3>
             </div>
+
+            <!-- les carte categories  -->
+            <%- include('composants/categoriesCardIn.ejs') %>
+
+            <!-- les carte categories  -->
+
+
             <!-- les deux carte du haut  -->
-            <%- include('composants/deuxCarteIn.ejs') %> <br>
+            <!-- <%- //include('composants/deuxCarteIn.ejs') %> <br> -->
                 <!-- les deux carte du haut  -->
 
 
