--- a/views/composants/deux-card.ejs
+++ b/views/composants/deux-card.ejs
@@ -6,7 +6,7 @@
             <p style="text-align: center; font-size: 0.9rem;">Iphone 12 simple</br>-
                 <span>Rouge 250G.</span>
             <div class="prix">
-                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 0.9rem;">250.999
+                <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 0.9rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -17,7 +17,7 @@
             <p style="text-align: center;font-size: 0.9rem ">Air pods</br>-
                 <span>Derniere generation</span>
             <div class="prix">
-                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 0.9rem;">150.999
+                <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 0.9rem;">150.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -30,7 +30,7 @@
             <p style="text-align: center; font-size: 0.9rem">Iphone 12 simple</br>-
                 <span>Rouge 250G.</span>
             <div class="prix">
-                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 0.9rem;">250.999
+                <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 0.9rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -41,7 +41,7 @@
             <p style="text-align: center; font-size: 0.9rem">Air pods</br>-
                 <span>Derniere generation</span>
             <div class="prix">
-                <span class="prix-actuel" style="color: #A60303; font-weight: bolder; font-size: 0.9rem;">150.999
+                <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 0.9rem;">150.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
