--- a/views/composants/slider-mode.ejs
+++ b/views/composants/slider-mode.ejs
@@ -8,7 +8,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -20,7 +20,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -32,7 +32,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -44,7 +44,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -56,7 +56,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -68,7 +68,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -80,7 +80,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -92,7 +92,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -104,7 +104,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -116,7 +116,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -128,7 +128,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -140,7 +140,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -152,7 +152,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -164,7 +164,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -176,7 +176,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -188,7 +188,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
@@ -200,7 +200,7 @@
                 <span>Rouge 250G.</span>
             <div class="prix">
                 <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
+                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
                     CFA</span>
             </div>
             <button>Ajouter</button>
