ajout de categories dans habits

--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -27,7 +27,7 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="habitsH()">
             <div class="left">
                 <i class="fa-solid fa-shirt"></i>
                 <p>Vetements hommes</p>        
