--- a/public/css/habits.css
+++ b/public/css/habits.css
@@ -1,17 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 *{
-  margin: 0%;
-  padding: 0%;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body {
-    
-}
 /* la navigation ici  */
+body {
+background-color: rgba(240, 255, 255, 0.568);
+
+}
+body .page-top{
+background-color: #293847;
+height: auto;
+padding-bottom: 5px;
+display: flex;
+flex-direction: column;
+align-items: center;
+position: fixed; 
+  z-index: 5; 
+  top: 0;         
+  left: 0;         
+  width: 100%;  
+}
 
 body nav{
   display: flex;
@@ -20,7 +35,7 @@ body nav{
   height: 65px;
   padding: 9px;
   color: white;
-  background-color: rgb(54, 53, 53);
+  background-color: #293847;
   position: fixed; 
   z-index: 5; 
   top: 0;         
@@ -51,31 +66,165 @@ nav .nav-left{
   width: 180px;
 
 }
-/* nav #bx-search{
+nav #bx-search{
   display: none;
-} */
+}
 
 
 /* la navigation ici  */
+
+/* la barre de recherche ici */
+
+/* From uiverse.io by @satyamchaudharydev */
+/* this button is inspired by -- whatsapp input */
+/* == type to see fully interactive and click the close buttom to remove the text  == */
+
+.form {
+--input-bg: #FFf;
+/*  background of input */
+--padding: 1.5em;
+--rotate: 80deg;
+/*  rotation degree of input*/
+--gap: 2em;
+/*  gap of items in input */
+--icon-change-color: #15A986;
+/*  when rotating changed icon color */
+--height: 40px;
+/*  height */
+width:95%;
+margin-top: 65px;
+padding-inline-end: 1em;
+/*  change this for padding in the end of input */
+background: var(--input-bg);
+position: relative;
+border-radius: 4px;
+}
+
+.form label {
+display: flex;
+align-items: center;
+width: 100%;
+height: 32px;
+margin-bottom: 5px;
+/* height: var(--height); */
+}
+
+.form input {
+width: 100%;
+padding-inline-start: calc(var(--padding) + var(--gap));
+outline: none;
+background: none;
+border: 0;
+height: 100%;
+margin: auto;
+}
+/* style for both icons -- search,close */
+.form svg {
+/* display: block; */
+color: #111;
+transition: 0.3s cubic-bezier(.4,0,.2,1);
+position: absolute;
+height: 15px;
+}
+/* search icon */
+.icon {
+position: absolute;
+left: var(--padding);
+transition: 0.3s cubic-bezier(.4,0,.2,1);
+display: flex;
+justify-content: center;
+align-items: center;
+}
+/* arrow-icon*/
+.swap-off {
+transform: rotate(-80deg);
+opacity: 0;
+visibility: hidden;
+}
+/* close button */
+.close-btn {
+/* removing default bg of button */
+background: none;
+border: none;
+right: calc(var(--padding) - var(--gap));
+box-sizing: border-box;
+display: flex;
+align-items: center;
+justify-content: center;
+color: #111;
+padding: 0.1em;
+width: 20px;
+height: 20px;
+border-radius: 50%;
+transition: 0.3s;
+opacity: 0;
+transform: scale(0);
+visibility: hidden;
+}
+
+.form input:focus ~ .icon {
+transform: rotate(var(--rotate)) scale(1.3);
+}
+
+.form input:focus ~ .icon .swap-off {
+opacity: 1;
+transform: rotate(-80deg);
+visibility: visible;
+color: var(--icon-change-color);
+}
+
+.form input:focus ~ .icon .swap-on {
+opacity: 0;
+visibility: visible;
+}
+
+.form input:valid ~ .icon {
+transform: scale(1.3) rotate(var(--rotate))
+}
+
+.form input:valid ~ .icon .swap-off {
+opacity: 1;
+visibility: visible;
+color: var(--icon-change-color);
+}
+
+.form input:valid ~ .icon .swap-on {
+opacity: 0;
+visibility: visible;
+}
+
+.form input:valid ~ .close-btn {
+opacity: 1;
+visibility: visible;
+transform: scale(1);
+transition: 0s;
+}
+
+/* la barre de recherche ici */
 
 /* burger menu ici  */
 body .burger-nav {
   max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
   background-color: white;
-  width: 90%;
+  color: rgb(57, 56, 56);
   position: absolute;
   z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
+  transition: 0.4s ease-in-out;
   overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
-  transition: 0.5s ease-in;
 }
 
 
 .burger-nav #menu-link{
   display: none;
   padding: 10px;
+}
+.burger-nav #menu-link p{
+font-size: 0.8rem !important;
+margin: 0;
+margin-left: 10px;
 }
 
 .burger-nav #affiche {
@@ -85,70 +234,135 @@ body .burger-nav {
   font-size: 0.8rem;
   height: 100px;
 }
-.burger-nav #accueil-link{
-
-  background-color: #efedec;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px;
-  font-size: 0.8rem;
-  height: 100px;
+.burger-nav #link{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ font-weight: 600;
+ padding: 0px;
+ height: 30px;
 }
-.burger-nav #vetements-link{
-  
-  background-color: #efedec;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px;
-  font-size: 0.8rem;
-  height: 100px;
+#link .left{
+display: flex;
+align-items: center;
+justify-content: center;
 }
-.burger-nav #frigo-link{
-  
-  background-color: #efedec;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px;
-  font-size: 0.8rem;
-  height: 100px;
-}
-.burger-nav #phone-link{
-  
-  background-color: #efedec;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px;
-  font-size: 0.8rem;
-  height: 100px;
-}
-.burger-nav #maison-link{
-  
-  background-color: #efedec;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px;
-  font-size: 0.8rem;
-  height: 100px;
+#link .left i{
+font-size: 1.2rem;
+color: grey;  
+margin-right: 20px;
 }
 
 /* burger menu ici  */
+
+/* categories carte ici  */
+
+.categories {
+
+  padding-top: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+.categories .carte{
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+.categories .carte-top{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  background-color: white;
+}
+.categories .carte-details{
+  height: 50px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f7f7;
+}
+
+
+/* categories carte ici  */
+
+/* footer ici  */
+.bg-footer {
+  background-color: #293847;
+  padding: 50px 0 30px;
+}
+.footer-heading {
+  letter-spacing: 2px;
+}
+
+.footer-link a {
+  color: #acacac;
+  line-height: 40px;
+  font-size: 14px;
+  transition: all 0.5s;
+}
+
+.footer-link a:hover {
+  color: #1bbc9b;
+}
+
+.contact-info {
+  color: #acacac;
+  font-size: 14px;
+}
+
+.footer-social-icon {
+  font-size: 15px;
+  height: 34px;
+  width: 34px;
+  line-height: 34px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline-block;
+}
+
+.facebook {
+  background-color: #4e71a8;
+  color: #ffffff;
+}
+
+.twitter {
+  background-color: #55acee;
+  color: #ffffff;
+}
+
+.google {
+  background-color: #d6492f;
+  color: #ffffff;
+}
+
+.apple {
+  background-color: #424041;
+  color: #ffffff;
+}
+
+.footer-alt {
+  color: #acacac;
+}
+
+.footer-heading {
+  position: relative;
+  padding-bottom: 12px;
+}
+
+.footer-heading:after {
+  content: '';
+  width: 25px;
+  border-bottom: 1px solid #FFF;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  border-bottom: 1px solid #1bbc9b;
+}
+
+ /* footer ici  */
