--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -332,27 +332,79 @@ margin-right: 20px;
 }
 /* APP pub ici */
 
-/* mark disposition  */
-.containe {
-  margin-bottom: 150px;
+/* footer ici  */
+.bg-footer {
+  background-color: #293847;
+  padding: 50px 0 30px;
+}
+.footer-heading {
+  letter-spacing: 2px;
 }
 
-.containe .mark-row{
-  padding-left: 70px;
-  width: 100%;
-  display: flex ;
-  justify-content: space-between;
+.footer-link a {
+  color: #acacac;
+  line-height: 40px;
+  font-size: 14px;
+  transition: all 0.5s;
 }
-/* mark disposition  */
 
-/* footer here  */
-body footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 0.7rem;
-  background-color: rgba(90, 84, 74, 0.18);
-  height: 50px;
-  padding: 15px;
+.footer-link a:hover {
+  color: #1bbc9b;
 }
-/* footer here  */
+
+.contact-info {
+  color: #acacac;
+  font-size: 14px;
+}
+
+.footer-social-icon {
+  font-size: 15px;
+  height: 34px;
+  width: 34px;
+  line-height: 34px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline-block;
+}
+
+.facebook {
+  background-color: #4e71a8;
+  color: #ffffff;
+}
+
+.twitter {
+  background-color: #55acee;
+  color: #ffffff;
+}
+
+.google {
+  background-color: #d6492f;
+  color: #ffffff;
+}
+
+.apple {
+  background-color: #424041;
+  color: #ffffff;
+}
+
+.footer-alt {
+  color: #acacac;
+}
+
+.footer-heading {
+  position: relative;
+  padding-bottom: 12px;
+}
+
+.footer-heading:after {
+  content: '';
+  width: 25px;
+  border-bottom: 1px solid #FFF;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  border-bottom: 1px solid #1bbc9b;
+}
+
+/* footer ici  */
