--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,6 @@ body nav{
     padding: 9px;
     color: white;
     background-color: #293847;
-    /* background-color: rgb(54, 53, 53); */
     position: fixed; 
     z-index: 5; 
     top: 0;         
@@ -880,27 +879,79 @@ color: gold;
  }
  /* APP pub ici */
 
- /* mark disposition  */
- .containe {
-    margin-bottom: 150px;
- }
- 
- .containe .mark-row{
-    padding-left: 70px;
-    width: 100%;
-    display: flex ;
-    justify-content: space-between;
- }
- /* mark disposition  */
+ /* footer ici  */
+ .bg-footer {
+  background-color: #293847;
+  padding: 50px 0 30px;
+}
+.footer-heading {
+  letter-spacing: 2px;
+}
 
- /* footer here  */
- body footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.7rem;
-    background-color: rgba(90, 84, 74, 0.18);
-    height: 50px;
-    padding: 15px;
- }
- /* footer here  */
+.footer-link a {
+  color: #acacac;
+  line-height: 40px;
+  font-size: 14px;
+  transition: all 0.5s;
+}
+
+.footer-link a:hover {
+  color: #1bbc9b;
+}
+
+.contact-info {
+  color: #acacac;
+  font-size: 14px;
+}
+
+.footer-social-icon {
+  font-size: 15px;
+  height: 34px;
+  width: 34px;
+  line-height: 34px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline-block;
+}
+
+.facebook {
+  background-color: #4e71a8;
+  color: #ffffff;
+}
+
+.twitter {
+  background-color: #55acee;
+  color: #ffffff;
+}
+
+.google {
+  background-color: #d6492f;
+  color: #ffffff;
+}
+
+.apple {
+  background-color: #424041;
+  color: #ffffff;
+}
+
+.footer-alt {
+  color: #acacac;
+}
+
+.footer-heading {
+  position: relative;
+  padding-bottom: 12px;
+}
+
+.footer-heading:after {
+  content: '';
+  width: 25px;
+  border-bottom: 1px solid #FFF;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  border-bottom: 1px solid #1bbc9b;
+}
+
+ /* footer ici  */
