--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
    
     <!-- awesome cdn  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
     <!-- box icon here  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -90,37 +91,10 @@
                             Retriuve des selecs creees juste pour toi</p> <br>
                         <input type="submit" value="TELECHARGER MAINTENANT"><br>
                     </div>
-                    <div class="containe" style="display: flex; flex-direction: column;
-            align-items: center; justify-content: space-between;">
-                        <br>
-                        <h4 style="text-align: center;">MARQUE A SUIVRE</h4>
-                        <div class="row mark-row">
-                            <div class="col">
-                                <img src="/img/apple.png" alt="">
-                            </div>
-                            <div class="col">
-                                <img src="/img/visa.png" alt="">
-                            </div>
-                        </div>
-                        <div class="row mark-row">
-                            <div class="col">
-                                <img src="/img/nike.png" alt="">
-                            </div>
-                            <div class="col">
-                                <img src="/img/android-logo.png" alt="">
-                            </div>
-                        </div>
-                        <div class="row mark-row">
-                            <div class="col">
-                                <img src="/img/adidas.png" alt="">
-                            </div>
-                            <div class="col">
-                                <img src="/img/windows.png" alt="">
-                            </div>
-                        </div>
-                    </div>
 
+                    <!-- FOOTER ICI  -->
                     <%- include('composants/footer.ejs') %>
+                    <!-- FOOTER ICI  -->
 
 
 
