--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -20,7 +20,7 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="montres()">
             <div class="left">
                 <i class='bx bxs-watch-alt'></i>
                 <p>Montres & Bijoux</p>        
@@ -34,7 +34,7 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="habitsF()">
             <div class="left">
                 <i class="fa-solid fa-person-dress"></i>
                 <p>Vetements femmes</p>        
