--- a/views/maison.ejs
+++ b/views/maison.ejs
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="refresh" content="2"> -->
+    <meta name="theme-color" content="#293847">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meuble & deco</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+   
+    <!-- awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
+    <!-- box icon here  -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- boostrap here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
+    <!-- mon css here -->
+    <link rel="stylesheet" href="/css/maison.css">
+    <title>Accueil</title>
 </head>
+
 <body>
-    
+
+    <%- include('composants/nav.ejs') %> <br> <br> <br>
+
+            <%- include('composants/burger-menu.ejs') %> 
+
+            <div class="categories row">
+                <h3>Meubles & Deco</h3> <br> <br>
+                <div class="col-6">
+                    <div class="carte shadow-sm">
+                        <div class="carte-top">
+                            <img src="./img/canaper.jpg" width="75" alt="">
+                        </div>
+                        <div class="carte-details">
+                            <p style="font-size: 0.9rem;">Meubles</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="carte shadow-sm">
+                        <div class="carte-top">
+                            <img src="./img/lampe.jpg" width="75" alt="">
+                        </div>
+                        <div class="carte-details">
+                            <p style="font-size: 0.9rem;">Decoration</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+                    <!-- FOOTER ICI  -->
+                    <%- include('composants/footer.ejs') %>
+                    <!-- FOOTER ICI  -->
+
+
+
+                        <!-- boostrap here -->
+
+                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                            crossorigin="anonymous"></script>
+
+                        <script src="/script/index.js"></script>
+
 </body>
+
 </html>
