--- a/views/montres.ejs
+++ b/views/montres.ejs
@@ -36,7 +36,7 @@
             <div class="categories row">
                 <h3>Montres & Bijoux</h3> <br> <br>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="montresCoPage()">
                         <div class="carte-top">
                             <img src="./img/applewatch.jpg" width="75" alt="">
                         </div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="montresPage()">
                         <div class="carte-top">
                             <img src="./img/montresuisse.jpg" width="75" alt="">
                         </div>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="bague()">
                         <div class="carte-top">
                             <img src="./img/bague.jpg" width="75" alt="">
                         </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="chaine()">
                         <div class="carte-top">
                             <img src="./img/chaine.jpg" width="75" alt="">
                         </div>
