ajout des pages dans les categories de tel & pc

--- a/views/dellPage.ejs
+++ b/views/dellPage.ejs
@@ -22,7 +22,7 @@
 
     <!-- mon css here -->
     <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <title>Dell</title>
 </head>
 
 <body>
