--- a/views/redmiPage.ejs
+++ b/views/redmiPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/redmiPage.css">
+    <title>Redmi</title>
 </head>
 
 <body>
