--- a/views/composants/categoriesCardin.ejs
+++ b/views/composants/categoriesCardin.ejs
@@ -1,7 +1,7 @@
 <div class="categories row">
     <div class="col-6">
-        <div class="carte shadow-sm">
-            <div class="carte-top">
+        <div class="carte shadow-sm" onclick="iphone()">
+            <div class="carte-top"> 
                 <img src="./img/xr.jpg" width="75" alt="">
             </div>
             <div class="carte-details">
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="samsung()">
             <div class="carte-top">
                 <img src="./img/s22.jpg" width="75" alt="">
             </div>
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="oppo()">
             <div class="carte-top">
                 <img src="./img/oppo.jpg" width="75" alt="">
             </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="redmi()">
             <div class="carte-top">
                 <img src="./img/xiomi.jpg" width="75" alt="">
             </div>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="tecno()">
             <div class="carte-top">
                 <img src="./img/tecno.jpg" width="75" alt="">
             </div>
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="infinix()">
             <div class="carte-top">
                 <img src="./img/infinix.jpg" width="75" alt="">
             </div>
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="itel()">
             <div class="carte-top">
                 <img src="./img/itel.jpg" width="75" alt="">
             </div>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="dell()">
             <div class="carte-top">
                 <img src="./img/dell.jpg" width="75" alt="">
             </div>
@@ -80,7 +80,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="mac()">
             <div class="carte-top">
                 <img src="./img/macbook.jpg" width="75" alt="">
             </div>
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="hp()">
             <div class="carte-top">
                 <img src="./img/hp.jpg" width="75" alt="">
             </div>
@@ -100,7 +100,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="pcTools()">
             <div class="carte-top">
                 <img src="./img/pcTools.jpg" width="75" alt="">
             </div>
@@ -110,7 +110,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div class="carte shadow-sm">
+        <div class="carte shadow-sm" onclick="telTools()">
             <div class="carte-top">
                 <img src="./img/phoneTools.jpg" width="75" alt="">
             </div>
