--- a/views/hpPage.ejs
+++ b/views/hpPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/hpPage.css">
+    <title>Hp</title>
 </head>
 
 <body>
