--- a/views/infinixPage.ejs
+++ b/views/infinixPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/infinixPage.css">
+    <title>Infinix</title>
 </head>
 
 <body>
