--- a/views/itelPage.ejs
+++ b/views/itelPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/itelPage.css">
+    <title>Itel</title>
 </head>
 
 <body>
