--- a/views/macPage.ejs
+++ b/views/macPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/macPage.css">
+    <title>Macbook</title>
 </head>
 
 <body>
