--- a/views/oppoPage.ejs
+++ b/views/oppoPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/oppoPage.css">
+    <title>Oppo</title>
 </head>
 
 <body>
