--- a/views/pcTools.ejs
+++ b/views/pcTools.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/pcTools.css">
+    <title>Accessoires pour Ordinateurs</title>
 </head>
 
 <body>
