--- a/views/samsungPage.ejs
+++ b/views/samsungPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/samsungPage.css">
+    <title>Samsung</title>
 </head>
 
 <body>
