--- a/views/tecnoPage.ejs
+++ b/views/tecnoPage.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/tecnoPage.css">
+    <title>Tecno</title>
 </head>
 
 <body>
