--- a/views/telTools.ejs
+++ b/views/telTools.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/montresPage.css">
-    <title>Montres</title>
+    <link rel="stylesheet" href="/css/telTools.css">
+    <title>Accessoires pour telephone</title>
 </head>
 
 <body>
