ajouter des pages dans vetements hommes

--- a/views/habitsH.ejs
+++ b/views/habitsH.ejs
@@ -30,7 +30,7 @@
         <h3 style="margin-left: 10px;">Vetements hommes</h3>
         <div class="categories row">
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="outfitH()">
                     <div class="carte-top">
                         <img src="./img/outfit.webp" width="65" alt="">
                     </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="chaussuresH()">
                     <div class="carte-top">
                         <img src="./img/chaussureH.jpg" width="75" alt="">
                     </div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="sacH()">
                     <div class="carte-top">
                         <img src="./img/sacH.jpg" width="75" alt="">
                     </div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="chaussetteH()">
                     <div class="carte-top">
                         <img src="./img/chaussettes.jpg" width="75" alt="">
                     </div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="chapeau()">
                     <div class="carte-top">
                         <img src="./img/chapeau.jpg" width="75" alt="">
                     </div>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="ceintureH()">
                     <div class="carte-top">
                         <img src="./img/ceinture.jpg" width="75" alt="">
                     </div>
