--- a/views/habitsF.ejs
+++ b/views/habitsF.ejs
@@ -30,7 +30,7 @@
         <h3 style="margin-left: 10px;">Vetements femmes</h3>
         <div class="categories row">
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="outfitF()">
                     <div class="carte-top">
                         <img src="./img/femme.jpg" width="65" alt="">
                     </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="chaussuresF()">
                     <div class="carte-top">
                         <img src="./img/talon.jpg" width="75" alt="">
                     </div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="sacF()">
                     <div class="carte-top">
                         <img src="./img/sac-a-main.jpg" width="75" alt="">
                     </div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="carte shadow-sm">
+                <div class="carte shadow-sm" onclick="chaussetteF()">
                     <div class="carte-top">
                         <img src="./img/chaussettes.jpg" width="75" alt="">
                     </div>
