--- a/views/maison.ejs
+++ b/views/maison.ejs
@@ -34,7 +34,7 @@
             <div class="categories row">
                 <h3>Meubles & Deco</h3> <br> <br>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="meublePage()">
                         <div class="carte-top">
                             <img src="./img/canaper.jpg" width="75" alt="">
                         </div>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm">
+                    <div class="carte shadow-sm" onclick="decoPage()">
                         <div class="carte-top">
                             <img src="./img/lampe.jpg" width="75" alt="">
                         </div>
