--- a/public/css/decoPage.css
+++ b/public/css/decoPage.css
@@ -235,22 +235,27 @@ margin-left: 10px;
   height: 100px;
 }
 .burger-nav #link{
+ box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 600;
  padding: 0px;
  height: 30px;
+ width: auto;
 }
 #link .left{
 display: flex;
 align-items: center;
-justify-content: center;
+height: 30px;
+padding: 0px;
+width: 195px;
 }
 #link .left i{
 font-size: 1.2rem;
 color: grey;  
-margin-right: 20px;
+margin-right: 10px;
+margin-left: 2px !important;
 }
 
 /* burger menu ici  */
