--- a/views/composants/nav.ejs
+++ b/views/composants/nav.ejs
@@ -7,7 +7,7 @@
         <div class="nav-right">
             <i id="bx-search" class='bx bx-search'></i>
             <div class="bar-vertical"></div>
-            <i class='bx bxs-shopping-bag-alt'></i>
+            <i onclick="panier()" class='bx bxs-shopping-bag-alt'></i>
         </div>
     </nav>
 
