--- a/views/habitsH.ejs
+++ b/views/habitsH.ejs
@@ -23,7 +23,10 @@
 <body>
     <%- include('composants/nav.ejs') %>
         <br>
-        <%- include('composants/burger-menu.ejs') %> <br><br> <br>
+        <%- include('composants/burger-menu.ejs') %> 
+        <%- include('composants/panier.ejs') %>
+
+        <br><br> <br>
          
 
         <br>
