--- a/views/maison.ejs
+++ b/views/maison.ejs
@@ -30,6 +30,8 @@
     <%- include('composants/nav.ejs') %> <br> <br> <br>
 
             <%- include('composants/burger-menu.ejs') %> 
+            <%- include('composants/panier.ejs') %>
+
 
             <div class="categories row">
                 <h3>Meubles & Deco</h3> <br> <br>
