--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -32,6 +32,8 @@
         <!-- le burger menu ici -->
         <%- include('composants/burger-menu.ejs') %>
             <!-- le burger menu ici -->
+            <%- include('composants/panier.ejs') %>
+
 
             <div class="header" style="margin-top: 115px; margin-bottom: 20px; padding: 5px; height: 20px;">
                 <h3>Telephone & Ordinateur</h3>
