--- a/public/css/macPage.css
+++ b/public/css/macPage.css
@@ -255,6 +255,52 @@ margin-right: 20px;
 
 /* burger menu ici  */
 
+/* mon panier ici  */
+.monPanier {
+  background-color: #f1f0f8;
+  min-height: 100vh; /* Par exemple, définissez une hauteur maximale */
+  width: 0%;
+  position: fixed; /* Position fixe pour que le panier reste en haut de la page */
+  top: 0;
+  right: 0; /* Vous pouvez ajouter "left: 0;" pour être sûr que le panier occupe toute la largeur */
+  z-index: 15;
+  transition: 0.5s ease-in;
+  overflow: auto;
+
+}
+.monPanier .top{
+  display: flex;
+  align-items: center;
+}
+.monPanier h3{
+  margin: auto;
+
+}
+.monPanier .center{
+  padding: 10px;
+}
+.monPanier .panier-vide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 10px;
+  margin-top: 20px;
+  background-color: white;
+}
+.panier-vide button{
+  width: 100%;
+  background-color: #0f68c1;
+  color: white;
+  font-size: 0.9rem;
+  border: none;
+  border-radius: 9px;
+  height: 45px;
+  margin-bottom: 10px;
+}
+ /* mon panier ici  */
+
 /* les carte de produits ici  */
 
 body .main{
