--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,12 +206,11 @@ nav #bx-search{
     max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
     background-color: white;
     color: rgb(57, 56, 56);
-    position: absolute;
     z-index: 10;
     position: fixed;
     top: 0;
     left: 0;
-    transition: 0.4s ease-in-out;
+    transition: 0.4s ease-in;
     overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
   }
 
@@ -253,6 +252,52 @@ nav #bx-search{
 }
 
  /* burger menu ici  */
+
+ /* mon panier ici  */
+ .monPanier {
+  background-color: #f1f0f8;
+  min-height: 100vh; /* Par exemple, définissez une hauteur maximale */
+  width: 0%;
+  position: fixed; /* Position fixe pour que le panier reste en haut de la page */
+  top: 0;
+  right: 0; /* Vous pouvez ajouter "left: 0;" pour être sûr que le panier occupe toute la largeur */
+  z-index: 15;
+  transition: 0.5s ease-in;
+  overflow: auto;
+
+}
+.monPanier .top{
+  display: flex;
+  align-items: center;
+}
+.monPanier h3{
+  margin: auto;
+
+}
+.monPanier .center{
+  padding: 10px;
+}
+.monPanier .panier-vide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 10px;
+  margin-top: 20px;
+  background-color: white;
+}
+.panier-vide button{
+  width: 100%;
+  background-color: #0f68c1;
+  color: white;
+  font-size: 0.9rem;
+  border: none;
+  border-radius: 9px;
+  height: 45px;
+  margin-bottom: 10px;
+}
+ /* mon panier ici  */
 
  /* la promo ici  */
 body .promo {
