--- a/views/hpPage.ejs
+++ b/views/hpPage.ejs
@@ -30,6 +30,8 @@
     <%- include('composants/nav.ejs') %>
 
             <%- include('composants/burger-menu.ejs') %>
+            <%- include('composants/panier.ejs') %>
+
 
 
 
