--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
 
         <%- include('composants/promo.ejs') %> <br>
             <%- include('composants/burger-menu.ejs') %>
+            <%- include('composants/panier.ejs') %>
                 <%- include('composants/tab-bar.ejs') %> 
                 <%- include('composants/coupon.ejs') %> <br>
 
