--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -77,7 +77,7 @@
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
         <hr>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="panier()">
             <div class="left">
                 <i class='bx bxs-shopping-bag-alt'></i>
                 <p>Mon panier</p>        
