--- a/views/composants/panier.ejs
+++ b/views/composants/panier.ejs
@@ -1,11 +1,10 @@
 <div class="monPanier" id="monPanier">
     <div class="top">
-        <i onclick="close_panier()" style="font-size: 3rem; color: rgb(10, 23, 46);" class='bx bx-right-arrow-alt'></i>
+        <i onclick="close_panier()" style="font-size: 3rem; " class='bx bx-right-arrow-alt'></i>
         <h3 >Mon panier </h3>
     </div>
-    <hr>
     <div class="center">
-        <div class="panier-vide shadow">
+        <div class="panier-vide shadow" onclick="accueil()">
             <h4>Votre panier est vide 🛒</h4> <br>
             <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
             <button>Voir les meilleures offres</button>
