--- a/views/composants/panier.ejs
+++ b/views/composants/panier.ejs
@@ -4,10 +4,53 @@
         <h3 >Mon panier </h3>
     </div>
     <div class="center">
+        <div class="panier-vide shadow-sm" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
         <div class="panier-vide shadow" onclick="accueil()">
             <h4>Votre panier est vide 🛒</h4> <br>
             <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
             <button>Voir les meilleures offres</button>
         </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+        <div class="panier-vide shadow" onclick="accueil()">
+            <h4>Votre panier est vide 🛒</h4> <br>
+            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+            <button>Voir les meilleures offres</button>
+        </div>
+
+        <br> <br> <br> <br> <br> <br> <br> <br> <br>
+    </div>
+    <div class="panier-footer">
+        <div class="footer-top">
+            <span><strong>Total</strong></span> <span>Nombre de produits</span>
+        </div>
+        <button>Commander</button>
     </div>
 </div>
