--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -8,7 +8,7 @@
         </div> <br>
         <div id="link" onclick="accueil()">
             <div class="left">
-                <i class='bx bx-home'></i>
+                <i style="font-size: 1.5rem;" class='bx bx-home'></i>
                 <p>Accueil</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
@@ -22,28 +22,28 @@
         </div> <br>
         <div id="link" onclick="montres()">
             <div class="left">
-                <i class='bx bxs-watch-alt'></i>
+                <i style="font-size: 1.7rem; margin-left: 0px;" class='bx bxs-watch-alt'></i>
                 <p>Montres & Bijoux</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
         <div id="link" onclick="habitsH()">
             <div class="left">
-                <i class="fa-solid fa-shirt"></i>
+                <i style="font-size: 1.1rem;" class="fa-solid fa-shirt"></i>
                 <p>Vetements hommes</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
         <div id="link" onclick="habitsF()">
             <div class="left">
-                <i class="fa-solid fa-person-dress"></i>
+                <i style="font-size: 1.5rem;" class="fa-solid fa-person-dress"></i>
                 <p>Vetements femmes</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
         <div id="link" onclick="accueil()">
             <div class="left">
-                <i class="fa-solid fa-child"></i>
+                <i style="font-size: 1.5rem;" class="fa-solid fa-child"></i>
                 <p>Vetements enfants</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
@@ -64,7 +64,7 @@
         </div> <br>
         <div id="link" onclick="accueil()">
             <div class="left">
-                <i class='bx bx-car'></i>
+                <i class="fa-solid fa-car"></i>
                 <p>Location de vehicule</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
