--- a/public/css/samsungPage.css
+++ b/public/css/samsungPage.css
@@ -303,8 +303,8 @@ margin-right: 20px;
  #link .left{
   display: flex;
   align-items: center;
-  justify-content: center;
- }
+  justify-content: start;
+  }
 #link .left i{
   font-size: 1.2rem;
   color: grey;  
