add id body on all page

--- a/views/habitsF.ejs
+++ b/views/habitsF.ejs
@@ -20,7 +20,7 @@
     <title>Vetements</title>
 </head>
 
-<body>
+<body id="body">
     <%- include('composants/nav.ejs') %>
         <br>
         <%- include('composants/burger-menu.ejs') %>
