--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -25,7 +25,7 @@
     <title>Telephone & pc</title>
 </head>
 
-<body>
+<body id="body">
     <!-- la navigation ici  -->
     <%- include('composants/nav.ejs') %>
         <!-- la navigation ici  -->
