creation de la page commander

--- a/views/composants/panier.ejs
+++ b/views/composants/panier.ejs
@@ -51,6 +51,6 @@
         <div class="footer-top">
             <span><strong>Total</strong></span> <span>Nombre de produits</span>
         </div>
-        <button>Commander</button>
+        <button type="button" onclick="commander()">Commander</button>
     </div>
 </div>
