--- a/views/montres.ejs
+++ b/views/montres.ejs
@@ -31,6 +31,7 @@
 
         <%- include('composants/promo.ejs') %> <br>
             <%- include('composants/burger-menu.ejs') %>
+            <%- include('composants/panier.ejs') %>
 
 
             <div class="categories row">
